# crypto_paper_trader_front

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  REFACTORING.md  audit-types.d.ts  index.html  package-lock.json  package.json  pyproject.toml  railway.toml  requirements.txt  tsconfig.audit.json  vite.config.js
scripts/: check-copy-style.mjs  check-header-boundary.mjs  check-i18n.mjs  check-v01816-ui.mjs  check-v01824-ui.mjs  check-v01825-ui.mjs  check-v01826-ui.mjs  check-v01827-ui.mjs  check-v01828-ui.mjs  check-v01829-ui.mjs  check-v01831-ui.mjs  check-v01832-ui.mjs  check-v01833-ui.mjs  check-v01834-ui.mjs  check_sqlite_health.py  recover_sqlite_sidecars.py
src/: App.jsx  api.js  i18n.js  styles.css
tests/: test_adaptive_history_background.py  test_adaptive_pattern_analysis.py  test_adaptive_pattern_integration.py  test_adaptive_research_retry_local.py  test_adaptive_selector_diagnostics.py  test_adaptive_strategy_research.py  test_admin_reset.py  test_ai_history_timezone.py  test_ai_pattern_trader.py  test_ai_scanner_progress.py  test_ai_scanner_result_limit.py  test_api_route_responsibilities.py  test_ema9_strategy.py  test_entry_quality_filters.py  test_indicators.py  test_lbr_310_anti_context.py  test_lbr_310_public_name.py  test_live_monitoring.py  test_mexc_candle_pagination.py  test_model.py  test_multi_broker.py  test_multi_strategy_analysis.py  test_no_file_exports.py  test_paper_broker.py  test_railway_storage.py  test_release_hygiene.py  test_running_header_summary.py  test_security.py  test_selector_account_snapshot_fallback.py  (+9 more)
(+73 files in other folders)
